render articles with new styling to fix in the center of the first page the list of articles, change color of buttons for pagination, add utils functions for truncate strings, parsehtml and formatdate

--- a/logicgate_visitors_blog/src/App.css
+++ b/logicgate_visitors_blog/src/App.css
@@ -3,3 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.ant-list-item-meta-description {
+  margin-top: -0.7rem;
+}
+
+.ant-pagination-item {
+  border-color: rgb(0, 0, 0) !important;
+  a {
+    color: rgb(0, 0, 0) !important;
+  }
+}
